test_regress/t/t_disable_iff_multi_bad.out
%Error-UNSUPPORTED: t/t_disable_iff_multi_bad.v:13:4: Unsupported: default disable iff
   13 |    default disable iff (!rstn);
      |    ^~~~~~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error-UNSUPPORTED: t/t_disable_iff_multi_bad.v:14:4: Unsupported: default disable iff
   14 |    default disable iff (!rstn);
      |    ^~~~~~~
%Error: Exiting due to
